设备接口添加

--- a/ycwx/html/qygl/html/doctor-info.html
+++ b/ycwx/html/qygl/html/doctor-info.html
@@ -33,8 +33,10 @@
 			    	<span id="doctorName" class="mr10 ml10"></span>
 		    		<span id="jobName" class="mr10 ml10"></span></p>
     		<p class="c-t-left c-f18">
+	    			<span id="teamCode" style="display: none;"></span>
+	    			<span id="teamName" style="display: none;"></span>
 					<span id="orgCode" style="display: none;"></span>
-					<span id="orgName" class="c-f20 mr10 ml10"></span><label id="teamName"></label></p>
+					<span id="orgName" class="c-f20 mr10 ml10"></span></p>
 			</div>
 			
 		</div>
@@ -49,7 +51,12 @@
 						<p class="c-f16 show" id="introduce"></p>
 					</li>
 				</ul>
-			</div>		
+		</div>
+		<div class="h61">
+			<div class="plr15 pb15 bottom-btn-box c-border-t" id="btnSign">
+				<a onclick="startSign()" class="c-btn c-btn-4dcd70 c-btn-full c-btn-radius c-f18">与其团队签约</a>
+			</div>
+		</div>
 		<script src="../../../js/jquery/2.1.3/jquery.js"></script>
 		<script src="../../../js/underscore.js"></script>
 		<script src="../../../js/es6-promise.js"></script>
