整体签约流程修改

--- a/ycwx/html/qygl/html/sign-success.html
+++ b/ycwx/html/qygl/html/sign-success.html
@@ -20,7 +20,7 @@
 		<div class="remind_class" >
 			<div class="div-content">您的签约申请已提交<br/>我们将会联系您到社区签订纸质签约<br/>服务协议，请保持电话畅通。</div>
 		<div class="div-remark">
-			<span class="mr10 f-fs14 f-tac c-74bf00">(5)</span>
+			<span id="timer_num" class="mr10 f-fs14 f-tac c-74bf00">(5)</span>
 			<span class="f-fs14 f-tac c-909090">秒后跳转</span>
 		</div>
 		</div>
@@ -31,6 +31,7 @@
 		<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js"></script>
 		<script src="../../../js/weixin_common.js"></script>
 		<script src="../js/sign-success.js"></script>
+		<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<body>
 	</body>
 </html>
