--- a/ycwx/html/tzzb/html/health-record.html
+++ b/ycwx/html/tzzb/html/health-record.html
@@ -509,6 +509,7 @@
 	<script src="../../../js/iscroll-pull-up-down.js"></script>
 	<script src="../../../js/pull-up-down.js"></script>
 	<script type="text/javascript" src="../../../widget/switchery/switchery.js"></script>
+<script type="text/javascript" src="../js/xuetang.js?11=11"></script>
 	<script type="text/javascript" src="../../../widget/swiper/3.1/swiper.jquery.min.js"></script>	
 	<script src="../../../widget/mobiscroll/2.15.1/js/mobiscroll.js"></script>
 	<script src="../../../widget/echarts/echarts.js"></script>
