--- a/ycwx/html/qygl/html/search-community.html
+++ b/ycwx/html/qygl/html/search-community.html
@@ -73,5 +73,6 @@
 		<script src="../../../js/pull-up-down.js"></script>
 		<script src="../js/search-bar.js"></script>
 		<script src="../js/search-community.js"></script>
+		<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	</body>
 </html>
