体征添加按钮块膝盖

--- a/ycwx/html/tzzb/html/health-record.html
+++ b/ycwx/html/tzzb/html/health-record.html
@@ -177,8 +177,8 @@
     <div class="div-dialog-content div-tizhengtezheng f-dn">
 		<div class="f-vam f-mr10 addxuetang f-ib"></div>
 		<div class="f-vam f-mr10 addxueya f-ib"></div>
-		<div class="f-vam f-mr10 addtizhong f-ib"></div>
-		<div class="f-vam f-mr10 addyaowei f-ib"></div>
+		<!--<div class="f-vam f-mr10 addtizhong f-ib"></div>-->
+		<!--<div class="f-vam f-mr10 addyaowei f-ib"></div>-->
 		<div class="f-vam f-mr10 addshebei f-ib"></div>
 		<div class="f-vam f-mr10 quxiao f-ib"></div>
 	</div>
