--- a/ycapp/html/yichangguanli/html/weiqianyuejuminxinxi.html
+++ b/ycapp/html/yichangguanli/html/weiqianyuejuminxinxi.html
@@ -18,6 +18,12 @@
 	</head>
 
 	<body>
+		<div class="h45">
+			<div class="demo-comtop">
+				<a class="mui-action-back"></a>
+					<h1 class="c-f18">居民资料</h1>
+			</div>
+		</div>
 		
 		<script type="text/html" id="detail_info_tmpl">
 			
