--- a/ycapp/html/yichangguanli/html/daiqianyue.html
+++ b/ycapp/html/yichangguanli/html/daiqianyue.html
@@ -89,7 +89,7 @@
         -->
 		<script type="text/html" id="pati_list_tmpl">
 			{{each data as value i}}	
-			<li class="n-list-link list-arrow-r n-list-cover tab-{{tab}}" data-name="{{value.name}}"  data-info="{{value | setJson}}">
+			<li class="n-list-link list-arrow-r n-list-cover tab-{{tab}}" data-id="{{value.chId}}" data-name="{{value.name}}"  data-info="{{value | setJson}}">
 				<div class="patient-face patient-face-new">
 					{{if value.photo}}
 					<img src="{{value.photo}}"> {{else}}
@@ -98,8 +98,10 @@
 
 
 				<div class="n-list-info">
-					<h4 class="c-nowrap c-f16">{{value.name}}<em class="ml5 c-f15 c-909090">{{value.sex | setSex}} {{value.age}}岁</em></h4>
-					<p class="c-f15 c-909090 pt5">{{value.disease | setDisease}}</p>
+					<h4 class="c-nowrap c-f16">{{value.name}}<em class="ml5 c-f15 c-909090"> ( {{value.sex | setSex}}  {{value.age}}岁 )</em></h4>
+						
+					<!--<p class="c-f15 c-909090 pt5">{{value.disease | setDisease}}</p>-->
+					<p class="c-f15 c-909090 pt5">{{value.sortType}}</p>
 					<em class="red-point"></em> </div>
 				
 			</li>
