--- a/ycapp/html/yichangguanli/html/health-record.html
+++ b/ycapp/html/yichangguanli/html/health-record.html
@@ -31,6 +31,13 @@
         <h1>健康记录</h1>
     </div>
 </div>-->
+		<div class="h45">
+			<div class="demo-comtop">
+				<a class="mui-action-back"></a>
+				<h1 class="c-f18">居民首页</h1>
+			</div>
+		</div>
+
 		<div id="docInfo" style="height: 120px; z-index: 100;"></div>
 		
 
@@ -188,7 +195,7 @@
 		</dl>
 
 		<script type="text/html" id="detail_info_tmpl">
-			<ul class="c-list c-border-b">
+			<ul class="c-list c-border-b" data-id="{{chId}}">
 				<li id='pati_info' class="c-list-text c-list-link">
 					<div class="l-face"><img src='{{setPhoto}}'></div>
 					<div class="l-list-info pl10">
