--- a/ycapp/html/yichangguanli/html/yiqianyue.html
+++ b/ycapp/html/yichangguanli/html/yiqianyue.html
@@ -67,7 +67,7 @@
 				</div>
 				<ul class="n-list" style="{{if !(isOpen(val.code, nameSearch, val.patients))}}display: none;{{/if}} ">
 					{{each val.patients as value j}}
-					<li class="n-list-link list-arrow-r n-list-cover" data-name="{{value.name}}" data-ground="{{val.code}}" data-info="{{value | setJson}}">
+					<li class="n-list-link list-arrow-r n-list-cover" data-id="{{value.chId}}" data-name="{{value.name}}" data-ground="{{val.code}}" data-info="{{value | setJson}}">
 						<div class="patient-face patient-face-new">
 							{{if value.photo}}
 							<img src="{{value.photo}}"> {{else}}
@@ -75,10 +75,10 @@
 						</div>
 
 						<div class="n-list-info">
-							<h4 class="c-nowrap c-f16">{{value.name}}<em class="ml5 c-f15 c-909090">{{value.sex | setSex}} {{value.age}}岁</em></h4>
-							<p class="c-f15 c-909090 pt5">{{value.disease | setDisease}}</p>
+							<h4 class="c-nowrap c-f16">{{value.name}}<em class="ml5 c-f15 c-909090"> ( {{value.sex | setSex}}  {{value.age}}岁 )</em></h4>
+							<p class="c-f15 c-909090 pt5">{{value.sortType}}</p>
+							<!--<p class="c-f15 c-909090 pt5">{{value.disease | setDisease}}</p>-->
 							<em class="red-point"></em> </div>
-						
 					</li>
 					{{/each}}
 				</ul>
