医生端：页面微调

--- a/ycapp/html/yichangguanli/html/mine.html
+++ b/ycapp/html/yichangguanli/html/mine.html
@@ -50,11 +50,12 @@
 				<li class=" c-list-text c-list-cover jx" style="height: 10px; padding:0 !important; background: #f2f4f6;">
 						
 				</li>
-				<li class=" c-list-text c-list-cover tab" data-href="set.html">
+				<!-- 取消设置-退出操作  -->
+				<!--<li class=" c-list-text c-list-cover tab" data-href="set.html">
 					<div class="c-list-value">
 						<h4><span class="color-iconfont mr15"><img src="../../../common/images/demo-por02.png"></span>设置</h4>
 					</div>
-				</li>
+				</li>-->
 			</ul>
 		</div>
 	</body>
