--- a/ycwx/html/qygl/html/argument.html
+++ b/ycwx/html/qygl/html/argument.html
@@ -34,9 +34,9 @@
 			<p class="c-f13 c-fwb">六、本协议自签订之日起生效，协议书与附件具有同等法律效力，有效期一年，期满自动解约。</p>
 			<p class="c-f13 c-fwb">七、本协议一式两份，甲、乙双方各执一份。</p>
 		</div>
-		<div id="agree_btn">
-			我已认真阅读并同意该协议
-		</div>
+		<!--<div id="agree_btn">-->
+			<!--我已认真阅读并同意该协议-->
+		<!--</div>-->
 		<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
 		<script src="../js/underscore.js"></script>
 		<script src="../js/es6-promise.js"></script>
