--- a/ycwx/html/qygl/html/signing-doctors.html
+++ b/ycwx/html/qygl/html/signing-doctors.html
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 			<div class="only-sanshi">
-				<img src="../images/banner.png" onclick="javascript:location.href='signing-share.html?enableSign=1'"/>
+				<img src="../images/banner.png" onclick="javascript:location.href='signing-share.html'"/>
 				<div class="c-row btn-wrap">
 			        <div class="c-50 c-tac height-50 lheight-50 bc-ff9526 c-fff"><a href="agreement.html?readonly=1" class="c-fff">了解签约协议</a></div>
 			        <div class="c-50 c-tac height-50 lheight-50 bc-75bf00 c-fff"><a id="sign_family_doctor_btn" class="c-fff">签约家庭医生</a></div>
