--- a/wlyy-yc/src/main/resources/html/qygl/html/sign-success.html
+++ b/wlyy-yc/src/main/resources/html/qygl/html/sign-success.html
@@ -8,9 +8,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<title>签约申请提交成功</title>
-		<link rel="stylesheet" href="../css/cross.css" type="text/css" />
-		<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
+		<link rel="stylesheet" href="../../../css/cross.css" type="text/css" />
+		<!--<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css" />-->
+		<!--<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">-->
 		<link rel="stylesheet" href="../css/sign_success.css" type="text/css" />
 	</head>
 	<body class="c-333 lhp150 pl10 pr10">
@@ -25,8 +25,8 @@
 		</div>
 		</div>
 		<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
-		<script src="../js/underscore.js"></script>
-		<script src="../js/es6-promise.js"></script>
+		<!--<script src="../js/underscore.js"></script>-->
+		<!--<script src="../js/es6-promise.js"></script>-->
 		<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js"></script>
 		<script src="../../../js/weixin_common.js"></script>
