--- a/wlyy-yc/src/main/resources/html/qygl/html/doctor-homepage.html
+++ b/wlyy-yc/src/main/resources/html/qygl/html/doctor-homepage.html
@@ -10,7 +10,7 @@
 		<title>医生主页</title>
 		<link rel="stylesheet" type="text/css" href="../../../css/cross.css" />
 		<link rel="stylesheet" type="text/css" href="../../../css/cross.ui.css" />
-		<link rel="stylesheet" type="text/css" href="../../../iconfont/iconfont.css" />
+		<!--<link rel="stylesheet" type="text/css" href="../../../iconfont/iconfont.css" />-->
 		<link rel="stylesheet" type="text/css" href="../../../css/extension.ui.css">
 		<link rel="stylesheet" type="text/css" href="../../../css/sq-style.css" />	
 		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
@@ -25,7 +25,7 @@
 					<h1>医生主页</h1>
 				</div>
 			</div>-->
-			<div class="sdoc-top smil short clearfix">
+			<div class="sdoc-top smil team short clearfix">
 				<span class="sdimg fl">
 					<img id="photo" src="" class="c-images-cycle">
 				</span>
@@ -267,7 +267,7 @@
 				</div>
 			</div>
 	 </div>
-		<img id="introduce_guide" src="../images/tishitu.png"/>
+		<!--<img id="introduce_guide" src="../images/tishitu.png"/>-->
 		<div id="introduce_text">
 			<div>
 				点击右上角
