--- a/wlyy-yc/src/main/resources/html/qygl/html/doctor-info.html
+++ b/wlyy-yc/src/main/resources/html/qygl/html/doctor-info.html
@@ -24,7 +24,7 @@
 					<h1>医生主页</h1>
 				</div>
 			</div>-->
-			<div class="sdoc-top smil short clearfix">
+			<div class="sdoc-top smil doctor short clearfix">
 				<span class="sdimg fl">
 					<img id="photo" src="" class="c-images-cycle">
 				</span>
