app目录迁移,设备接口调整

--- a/ycapp/index.html
+++ b/ycapp/index.html
@@ -5,16 +5,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
-		<script src="js/mui.min.js"></script>
-		<script src="html/yichangguanli/js/common.js"></script>
-		<link href="css/mui.min.css" rel="stylesheet" />
+		<script src="../wlyy-yc/src/main/resources/app/js/mui.min.js"></script>
+		<script src="../wlyy-yc/src/main/resources/app/html/yichangguanli/js/common.js"></script>
+		<link href="../wlyy-yc/src/main/resources/app/css/mui.min.css" rel="stylesheet" />
 		<script type="text/javascript" charset="utf-8">
 			mui.init();
 		</script>
 	</head>
 
 	<body>
-		<script src="js/common_http.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../wlyy-yc/src/main/resources/app/js/common_http.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			var wgtVer = null;
 			mui.plusReady(function() {
