--- a/wlyy-yc/src/main/resources/wx/html/qygl/html/search-team.html
+++ b/wlyy-yc/src/main/resources/wx/html/qygl/html/search-team.html
@@ -34,8 +34,8 @@
 			        	<img src="../../../images/hospital_default.png" class="c-w-60 c-h-50" style="border: 1px solid #FFF;"></img>
 			        </div>
 			        <div class="ui-col-1 pt15 ml20">
-			        	<div ><span class="c-f16 c-bold">思明区前埔社区卫生服务中心</span></div>
-			        	<div class="c-f14 ">思明区望海路102号</div>
+			        	<div ><span id="community-name" class="c-f16 c-bold"></span></div>
+			        	<div id="community-address" class="c-f14 "></div>
 			        </div>
 			    </a>
 		</div>
