--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/daiqianyue.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/daiqianyue.html
@@ -112,6 +112,8 @@
 		
 		<script type="text/javascript" src="../../../js/jquery/2.1.3/jquery.js"></script>
 		<script type="text/javascript" src="../../../js/mui.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css" />
+		<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../../js/template.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
