--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
@@ -12,6 +12,12 @@
 	</head>
 
 	<body>
+		<div class="main">
+			<iframe style="width: 100%; display: none" data-html="yiqianyue.html" src=""></iframe>
+			<iframe style="width: 100%; display: none" data-html="daiqianyue.html" src=""></iframe>
+			<iframe style="width: 100%; " data-html="mine.html" src="mine.html"></iframe>
+		</div>
+
 		<nav class="mui-bar mui-bar-tab" style="border-top:1px gainsboro solid;">
 			<a class="mui-tab-item mui-active" data-src="yiqianyue.html">
 				<span class="mui-icon iconfont icon-home"></span>
@@ -27,9 +33,11 @@
 			</a>
 		</nav>
 	</body>
-	<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../../../js/im_new.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../../js/jquery/2.1.3/jquery.js" type="text/javascript"></script>
+	<script src="../../../js/common_http.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css" />
+	<script src="../../../widget/artDialog/6.0.5/js/dialog-plus.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../../../js/im_new.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/common.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
