--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
@@ -24,13 +24,16 @@
 	</head>
 
 	<body>
-		
-		<!--<div class="h45">
-    <div class="demo-comtop">
-        <a class="mui-action-back"></a>
-        <h1>健康记录</h1>
-    </div>
-</div>-->
+
+        <div class="main pb100">
+            <div class="h45">
+                <div class="demo-comtop">
+                    <a class="mui-action-back"></a>
+                    <h1 style="font-size: 20px; line-height: 36px;">居民首页</h1>
+                </div>
+            </div>
+        </div>
+
 
 		<div id="docInfo" style="height: 120px; z-index: 100;"></div>
 		
