--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
@@ -13,9 +13,9 @@
 
 	<body>
 		<div class="main">
-			<iframe style="width: 100%; display: none" data-html="yiqianyue.html" src=""></iframe>
+			<iframe style="width: 100%;" data-html="yiqianyue.html" src=""></iframe>
 			<iframe style="width: 100%; display: none" data-html="daiqianyue.html" src=""></iframe>
-			<iframe style="width: 100%; " data-html="mine.html" src="mine.html"></iframe>
+			<iframe style="width: 100%; display: none" data-html="mine.html" src=""></iframe>
 		</div>
 
 		<nav class="mui-bar mui-bar-tab" style="border-top:1px gainsboro solid;">
