--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
+		<title>签约居民管理</title>
 		<script src="../../../js/mui.min.js"></script>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../../../common/iconfont/iconfont.css" />
