--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
@@ -25,7 +25,7 @@
 
 	<body>
 
-        <div class="main pb100">
+        <div>
             <div class="h45">
                 <div class="demo-comtop">
                     <a class="mui-action-back"></a>
