--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/main.html
@@ -12,6 +12,7 @@
 	</head>
 
 	<body>
+        <iframe style="background-color: #fff; width: 100%; display: none; position: absolute; z-index: 9999" id="subPage"  src=""></iframe>
 		<div class="main">
 			<iframe style="width: 100%;" data-html="yiqianyue.html" src=""></iframe>
 			<iframe style="width: 100%; display: none" data-html="daiqianyue.html" src=""></iframe>
