--- a/wlyy-yc/src/main/resources/wx/html/qygl/html/doctor-homepage.html
+++ b/wlyy-yc/src/main/resources/wx/html/qygl/html/doctor-homepage.html
@@ -31,7 +31,7 @@
 				</span>
 				<p class="c-t-left c-f18">
 					<span id="teamCode" style="display: none;"></span>
-					<span id="teamName" class="c-f20 mr10 ml10"></span><label id="teamName"></label></p>
+					<span class="c-f20 mr10 ml10"></span><label id="teamName"></label></p>
 			     <p class="c-t-left c-f16 c-toe f-dn">
 			     	<span id="orgCode" style="display: none;"></span>
 			    	<span id="orgName" class="mr10 ml10"></span></p>			
